# rls-demo

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_role.py  0002_create_tables.py  0003_add_privileges.py  0004_create_app_user.py
docker/: compose.yml
sql/: check-rls-coverage.sql  select-policies.sql
src/: db.py  main.py
tests/: conftest.py  test_isolation.py
