[project]
name = "rls-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.137.2",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.fastapi]
entrypoint = "src.main:app"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
